<resources>
    <string name="app_name">MMIW AR</string>
    <string name="hashtag_caps">#MMIW</string>
    <string name="stat_text_1">On some reservations, native women are murdered at a rate of 10 times the national average.</string>
    <string name="stat_text_2">Between 2005–2009 U.S. attorneys declined to prosecute 67% of native community matters involving sexual abuse.</string>
    <string name="stat_text_3">84% of Native women have experienced violence in their lifetime.</string>
    <string name="stat_text_4">96% of sexual violence against native women is perpetrated by non-natives.</string>
    <string name="stat_text_5">No more stolen sisters!</string>
    <string name="next_slide">Next</string>
    <string name="respect_agree">I Agree</string>
    <string name="respectful"><b>Please be respectful.</b> \n \nThis app\’s sole purpose is to bring awareness about #MMIWG2S. \n \nIf you would like to support the movement and add your voice, then this is the app for you. \n \nTo learn more, check out settings for links to more information. Thank you for your support." </string>
    <string name="back">Back</string>
    <string name="hashtag_only">#</string>
    <string name="m_only">M</string>
    <string name="i_only">I</string>
    <string name="w_only">W</string>
    <string name="issing">issing</string>
    <string name="urdered">urdered</string>
    <string name="ndigenous">ndigenous</string>
    <string name="omen">omen</string>
    <string name="share">Share</string>
    <string name="change_to_black_hand_color">Change to black hand color.</string>
    <string name="change_to_red_hand_color">Change to red hand color.</string>
    <string name="share_with_us_title">Will you share with us too?</string>
    <string name="share_with_us_description">We plan to use the image in a collage to show the support for MMIW. We may use the email to send you messages about community events, alerts for missing women in your area, and to let you know how you can make a difference in MMIW.</string>
    <string name="name_field_title">Name</string>
    <string name="email_field_title">Email Address</string>
    <string name="share_with_us_share_button">Share</string>
    <string name="share_title">Don\'t forget to hashtag #MMIW</string>
    <string name="share_with_us_skip_button">Skip</string>
    <string name="learn_more_niwrc_text">To learn more about MMIW, please visit \n<a href="https://www.niwrc.org/mmiwr-awareness">National Indigenous Women\'s Resource Center awareness page</a></string>
    <string name="learn_more_misti_text">For families of missing Native relatives, please check out the <a href="https://www.niwrc.org/resources/workbook/missing-indigenous-sisters-tools-initiative-misti">MISTI workbook</a>.</string>
    <string name="huge_thank_you_text">Huge thank you to</string>
    <string name="credit_text">Our Supporters\:\nDevelopment Team:\nRachel, Teressa, Kaitlyn, Callum, Hằng, Pavan, Mark, Caleb, Jessica, Pete, Nicole, Joshua, Nathan, Chase\n\nPhotographers, Subjects: \nSlide 1: IG @lorieshaull, Asia Johnson \nSlide 2: Reid Williams, Nick Wakos \nSlide 3: Aaron Tambour, Michelle Buckley</string>
    <string name="child_abuse_support_email">If you suspect child abuse or exploitation in the app, please email <a href="mailto:mehequanna+csae@gmail.com?subject=Child%20Abuse%20or%20Exploitation%20Report">support.</a></string>
</resources>
