<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <view
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/banner_black"/>
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/share_with_us_title"
        app:layout_constraintTop_toBottomOf="@id/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/white_100"
        android:textSize="24sp"
        android:text="@string/share_with_us_title"/>

    <TextView
        android:id="@+id/share_with_us_description"
        app:layout_constraintTop_toBottomOf="@id/share_with_us_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white_100"
        android:textSize="16sp"
        android:text="@string/share_with_us_description"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/share_with_us_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:textColor="@color/white_100"
            android:textSize="14sp"
            android:hint="@string/email_field_title"
            android:textColorHint="@color/white_100"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/state_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/email_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/state_edit_text"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:textColor="@color/white_100"
            android:hint="@string/state_field_title"
            android:textColorHint="@color/white_100"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        app:layout_constraintBottom_toTopOf="@id/skip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white_100"
        android:text="@string/share_with_us_share_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@null"
        android:textColor="@color/white_100"
        android:text="@string/share_with_us_skip_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
