<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/statImage"
        android:importantForAccessibility="no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <View
        android:id="@+id/gradientView"
        android:background="@drawable/gradient_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hashtag_caps"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/statText"
        android:layout_width="0dp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/stat_text_1" />

    <TextView
        android:id="@+id/nextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_slide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginEnd="16dp" />

    <com.mehequanna.mmiw.widgets.StatIndicatorViewGroup
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/nextText"
        app:layout_constraintTop_toTopOf="@id/nextText"
        app:layout_constraintBottom_toBottomOf="@id/nextText" />


</androidx.constraintlayout.widget.ConstraintLayout>